--- a/Video-Previewer-GUI/Base.lproj/Main.storyboard
+++ b/Video-Previewer-GUI/Base.lproj/Main.storyboard
@@ -153,9 +153,9 @@
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                                     <items>
-                                        <menuItem title="Video-Previewer-GUI Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                                        <menuItem title="Documentation" keyEquivalent="?" id="FKE-Sm-Kum">
                                             <connections>
-                                                <action selector="showHelp:" target="Ady-hI-5gd" id="y7X-2Q-9no"/>
+                                                <action selector="openGithubReadme:" target="Ady-hI-5gd" id="w7N-Z2-O7s"/>
                                             </connections>
                                         </menuItem>
                                     </items>
