Split Preferences window into tabs

--- a/Video-Previewer-GUI/Base.lproj/Main.storyboard
+++ b/Video-Previewer-GUI/Base.lproj/Main.storyboard
@@ -22,9 +22,9 @@
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
-                                        <menuItem title="Configuration Options" keyEquivalent="," id="BOF-NM-1cW">
+                                        <menuItem title="Preferences" keyEquivalent="," id="BOF-NM-1cW">
                                             <connections>
-                                                <action selector="openConfigurationWindow:" target="Ady-hI-5gd" id="5yU-Aq-zht"/>
+                                                <action selector="openPreferencesWindow:" target="Ady-hI-5gd" id="5yU-Aq-zht"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="wFC-TO-SCJ"/>
